# smart_butler_ros2

./: .gitignore
.github/workflows/: test.yml
smart_butler_ws/config/: features.yaml  sim.yaml
smart_butler_ws/scripts/: check_network.sh
smart_butler_ws/src/butler_audio/: package.xml  setup.cfg  setup.py
smart_butler_ws/src/butler_audio/butler_audio/: mic_node.py  speaker_node.py
smart_butler_ws/src/butler_audio/tests/: test_mic_node.py  test_speaker_node.py
smart_butler_ws/src/butler_bringup/: package.xml  setup.cfg  setup.py
smart_butler_ws/src/butler_bringup/butler_bringup/: config_manager.py
smart_butler_ws/src/butler_bringup/launch/: moss_sim.launch.py
smart_butler_ws/src/butler_bringup/tests/: test_config_manager.py
smart_butler_ws/src/butler_camera/: package.xml  setup.cfg  setup.py
smart_butler_ws/src/butler_camera/butler_camera/: sim_camera_node.py
smart_butler_ws/src/butler_description/: CMakeLists.txt  package.xml
smart_butler_ws/src/butler_description/urdf/: moss.urdf.xacro
smart_butler_ws/src/butler_gazebo/: CMakeLists.txt  package.xml
smart_butler_ws/src/butler_gazebo/butler_gazebo/: smart_devices_sim.py
smart_butler_ws/src/butler_gazebo/launch/: sim_world.launch.py
smart_butler_ws/src/butler_gazebo/test/: test_simulation.py
smart_butler_ws/src/butler_gazebo/worlds/: smart_home.sdf
smart_butler_ws/src/butler_gimbal/: package.xml  setup.cfg  setup.py
smart_butler_ws/src/butler_msgs/: CMakeLists.txt  package.xml
smart_butler_ws/src/butler_voice/: package.xml  setup.cfg  setup.py
(+11 files in other folders)
